--- a/Marchen/Views/LyricLineTableViewCell.xib
+++ b/Marchen/Views/LyricLineTableViewCell.xib
@@ -20,7 +20,7 @@
                         <rect key="frame" x="10" y="0.0" width="300" height="75"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     </view>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LVj-E7-2xy">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LVj-E7-2xy" customClass="MyTextField" customModule="Marchen" customModuleProvider="target">
                         <rect key="frame" x="20" y="20" width="280" height="60"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <textInputTraits key="textInputTraits"/>
