--- a/Marchen/Views/Base.lproj/Main.storyboard
+++ b/Marchen/Views/Base.lproj/Main.storyboard
@@ -945,9 +945,9 @@
                                 </connections>
                             </barButtonItem>
                             <barButtonItem title="Share" image="square.and.arrow.up" catalog="system" id="S1O-kP-mUv"/>
-                            <barButtonItem title="Melody" image="music.note" catalog="system" id="18O-V5-MCj"/>
-                            <barButtonItem title="Chord" image="music.note.list" catalog="system" id="xay-Ha-cxA"/>
-                            <barButtonItem title="Record" image="largecircle.fill.circle" catalog="system" id="nEg-Ke-5A5"/>
+                            <barButtonItem title="MelodyChord" image="music.note" catalog="system" id="18O-V5-MCj"/>
+                            <barButtonItem title="AddNewChordProgression" image="text.badge.plus" catalog="system" id="xay-Ha-cxA"/>
+                            <barButtonItem title="RecordStop" image="largecircle.fill.circle" catalog="system" id="nEg-Ke-5A5"/>
                             <barButtonItem title="PlayStop" image="play.fill" catalog="system" id="5li-X2-aiW"/>
                             <barButtonItem title="Rewind" image="backward.end.fill" catalog="system" id="3in-eg-Hlu"/>
                         </rightBarButtonItems>
@@ -969,10 +969,10 @@
                                 <rect key="frame" x="44" y="44" width="808" height="349"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6sv-iO-4QQ" userLabel="Setting View">
-                                        <rect key="frame" x="0.0" y="0.0" width="808" height="189"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="808" height="235"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="9gZ-G3-1OO" userLabel="Setting Stack View">
-                                                <rect key="frame" x="0.0" y="20" width="808" height="169"/>
+                                                <rect key="frame" x="0.0" y="20" width="808" height="215"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="906-us-VXf" userLabel="KeyboardMode Stack View">
                                                         <rect key="frame" x="0.0" y="0.0" width="808" height="31"/>
@@ -1053,6 +1053,27 @@
                                                             </segmentedControl>
                                                         </subviews>
                                                     </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="AZk-Vj-OWK" userLabel="Sound Stack View">
+                                                        <rect key="frame" x="0.0" y="184" width="808" height="31"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4oS-iQ-76o" userLabel="Sound">
+                                                                <rect key="frame" x="0.0" y="0.0" width="404" height="31"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MSh-c0-jkx">
+                                                                <rect key="frame" x="404" y="0.0" width="404" height="32"/>
+                                                                <segments>
+                                                                    <segment title="Piano"/>
+                                                                    <segment title="Brass"/>
+                                                                    <segment title="LoTine81z"/>
+                                                                    <segment title="Metalimba"/>
+                                                                    <segment title="Pluck Bass"/>
+                                                                </segments>
+                                                            </segmentedControl>
+                                                        </subviews>
+                                                    </stackView>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
@@ -1097,12 +1118,12 @@
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="largecircle.fill.circle" catalog="system" width="128" height="121"/>
         <image name="music.note" catalog="system" width="97" height="128"/>
-        <image name="music.note.list" catalog="system" width="128" height="113"/>
         <image name="play" catalog="system" width="120" height="128"/>
         <image name="play.circle" catalog="system" width="128" height="121"/>
         <image name="play.fill" catalog="system" width="116" height="128"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="recordingtape" catalog="system" width="128" height="60"/>
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <image name="text.badge.plus" catalog="system" width="128" height="109"/>
     </resources>
 </document>
