--- a/Marchen/Views/Base.lproj/Main.storyboard
+++ b/Marchen/Views/Base.lproj/Main.storyboard
@@ -893,7 +893,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DPN-JP-G3V" userLabel="Lyric View">
                                                         <rect key="frame" x="0.0" y="0.0" width="36" height="34"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lyric" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjD-qO-Fri" userLabel="Lyric View Temporary Label">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lyric" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjD-qO-Fri" userLabel="Lyric Label">
                                                                 <rect key="frame" x="0.0" y="0.0" width="36" height="34"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
@@ -980,6 +980,8 @@
                         <outlet property="containerView" destination="Bha-tS-pLo" id="paw-sN-sdk"/>
                         <outlet property="containerViewTransitionButton" destination="18O-V5-MCj" id="GcF-DF-ahr"/>
                         <outlet property="keyboardView" destination="n1W-LN-Eet" id="Vvu-F1-F5E"/>
+                        <outlet property="lyricLabel" destination="AjD-qO-Fri" id="18s-fU-Un5"/>
+                        <outlet property="lyricScrollView" destination="5C0-5G-TZH" id="VFO-2g-fh0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ja4-ND-wzp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
